--- a/aboutus.html
+++ b/aboutus.html
@@ -366,9 +366,9 @@
 
     <div class="image-box">
       <div class="image-container">
-        <img src="image1.jpg" class="image1" alt="Image 1">
-        <img src="image2.jpg" class="image2" alt="Image 2">
-        <img src="image3.jpg" class="image3" alt="Image 3">
+        <img src="Images/glasses-12.png" class="image1" alt="Image 1">
+        <img src="Images/glasses-12.png" class="image2" alt="Image 2">
+        <img src="Images/glasses-12.png" class="image3" alt="Image 3">
       </div>
     </div>
   </section>
