--- a/filter2.html
+++ b/filter2.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optical - Premium Eyewear Collection</title>
+    <title>Al Manar Optics</title>
         <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/filter2.css">
+    <link rel="icon" href="Images/ManarLogo-.png" type="image/png">
 </head>
 <body>
  <header>
@@ -25,14 +26,13 @@
             </ul>
             <ul class="part2">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="#about-section">About</a></li>
                 <li><a href="filter2.html">Store</a></li>
                 <li><a href="https://github.com/Sahar-AbdulQdir/CIC-VR-Tool/blob/main/Virtual-tryon-master/public/index.html" target="_blank" rel="noopener noreferrer">Virtual Try-On</a></li>
             </ul>
             <ul class="part3">
-
                 <li><i class="fas fa-cart-plus" style="font-size:20px"></i></li>
-            </ul>            
+            </ul>           
             </div>
         </div>
     </header>
