--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=League+Spartan:wght@600&family=Manrope:wght@600&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="Images/ManarLogo-.png" type="image/png">
+    <title>Al Manar Optics</title>
 </head>
 <body>
 <!-- Loading Screen -->
