--- a/store.html
+++ b/store.html
@@ -27,7 +27,7 @@
             <ul class="part2">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about-section">About</a></li>
-                <li><a href="filter2.html">Store</a></li>
+                <li><a href="store.html">Store</a></li>
                 <li><a href="https://github.com/Sahar-AbdulQdir/CIC-VR-Tool/blob/main/Virtual-tryon-master/public/index.html" target="_blank" rel="noopener noreferrer">Virtual Try-On</a></li>
             </ul>
             <ul class="part3">
