--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
   
   <div class="bottom-images">
     <div class="image-card">
-      <img src="Images/len1.png alt="Contact Lens Look 1" class="tilt-hover">
+      <img src="Images/len1.png" alt="Contact Lens Look 1" class="tilt-hover">
       <div class="card-content">
         <h4>Daily Comfort</h4>
         <p>Breathable materials for all-day wear</p>
